deployment.yaml
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  selector:
    matchLabels:
      name: hello-kubernetes
  template:
    metadata:
      labels:
        name: hello-kubernetes
    spec:
      containers:
        - name: app
          image: gcr.io/PROJECT_ID/quickstart-image:tag1
          ports:
            - containerPort: 8080
          resources:    
            limits:
              memory: "128Mi"
              cpu: "500m"

#service
#apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: hello-kubernetes
